--- a/MovieApp.Api/Properties/launchSettings.json
+++ b/MovieApp.Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "BankAccount": {
+    "Movie.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7185;http://localhost:5241"
+      "applicationUrl": "https://localhost:7043;http://localhost:5272"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -31,8 +31,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14435",
-      "sslPort": 44373
+      "applicationUrl": "http://localhost:51707",
+      "sslPort": 44396
     }
   }
 }
